--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@aksara-ui/core": "^1.0.0-canary.29",
     "@aksara-ui/icons": "^1.0.0-canary.9",
+    "@kata-kit/card": "^0.7.2",
+    "@kata-kit/modal": "^0.7.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
