--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-chrono": "^1.7.4",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-slick": "^0.27.13",
