remove unused library

--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "@aksara-ui/core": "^1.0.0-canary.29",
     "@aksara-ui/icons": "^1.0.0-canary.9",
     "@kata-kit/card": "^0.7.2",
-    "@kata-kit/modal": "^0.7.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "serve": "^11.3.2",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
